1. Paged thumbs nav plugin: Fix for maxspace uncropped thumbs and adds a small css change: now there is a id for disabled next and prev thumbs links which may need if a theme design requires them to be visible. Also some errors in the doc comment have been fixed. 2. CSS update for zenpage-default theme to match the paged thumbs css addition.
git-svn-id: http://www.zenphoto.org/svn/trunk@3883 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/themes/zenpage-default/style.css
+++ b/themes/zenpage-default/style.css
@@ -528,6 +528,25 @@ ul.pagelist li.next {
 	text-align: center;
 }
 
+#pagedthumbsnav-prevdisabled {
+	visibility: hidden;
+	width: 155px;
+	height: 20px;
+	padding-top: 10px;
+	font-size: 1em;
+	float: left;
+}
+
+#pagedthumbsnav-nextdisabled {
+	visibility: hidden;
+	width: 100px;
+	height: 20px;
+	padding-top: 10px;
+	font-size: 1em;
+	float: right;
+	text-align: center;
+}
+
 /* Comments
 ------------------------------ */
 #comments {
